# 2025-p1-ajsmith19

./: README.md  endpoints.http  pyproject.toml
todo/views/: routes.py
